Fix 145 findbugs errors in amx-core, mainly for llc. Passed top down build, QL.
git-svn-id: https://svn.java.net/svn/glassfish~svn/trunk/main@56225 6f3ba3e3-413c-0410-a8aa-90bee3ab43b5